--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "dayjs": "^1.11.12",
+    "firebase": "^10.12.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
