--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
