--- a/package.json
+++ b/package.json
@@ -3,17 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.0.13",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.5",
+    "@mui/x-charts": "^7.11.1",
+    "@mui/x-data-grid": "^7.11.1",
+    "@mui/x-date-pickers": "^7.11.1",
+    "@popperjs/core": "^2.11.8",
+    "@table-library/react-table-library": "^4.1.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "cdbootstrap": "^1.3.4",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
+    "firebase": "^10.13.1",
+    "luxon": "^3.4.4",
+    "material-dashboard-react": "^1.10.0",
+    "material-ui-popup-state": "^5.1.2",
+    "mdb-react-ui-kit": "^8.0.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
+    "rsuite": "^5.70.0",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +64,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.26.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
