--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "dayjs": "^1.11.12",
+    "file-saver": "^2.0.5",
     "firebase": "^10.13.0",
     "material-ui-popup-state": "^5.1.2",
     "react": "^18.3.1",
